sampler/chain/projects/conductor/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/WorkflowExecutor.java:232: error: [NullAway] (INDEX= 9) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                null,
                ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/WorkflowExecutor.java:850: error: [NullAway] (INDEX= 24) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                            null,
                            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/DeciderService.java:734: error: [NullAway] (INDEX= 57) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                workflow, null, null);
                          ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/utils/ParametersUtils.java:160: error: [NullAway] (INDEX= 62) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        return replaceVariables(paramString, documentContext, null);
                                                              ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/events/queue/Message.java:24: error: [NullAway] (INDEX= 46) (Covered) initializer method does not guarantee @NonNull fields payload (line 19), id (line 20), receipt (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Message() {
           ^

	(see http://t.uber.com/nullaway )
